Update few crafts & configs; Remove infernal mobs

--- a/client/config/RolikMods/MutatedMobs_Config.cfg
+++ b/client/config/RolikMods/MutatedMobs_Config.cfg
@@ -89,7 +89,7 @@ general {
     I:HP_BlazeSnowman=25
     I:HP_Blenderman=60
     I:HP_CreeperGolem=222
-    I:HP_CreeperPig=30
+    I:HP_CreeperPig=9
     I:HP_CreeperVoker=40
     I:HP_DeadPolarWolf=99
     I:HP_ElderSpiderGuardian=135
@@ -100,7 +100,7 @@ general {
     I:HP_GhastShulker=60
     I:HP_GuardianGolem=100
     I:HP_HuskSpider=36
-    I:HP_IlliusionerCreeper=26
+    I:HP_IlliusionerCreeper=7
     I:HP_IlliusionerGhast=20
     I:HP_IlliusionerWitherSkeleton=25
     I:HP_PolarWolf=105
@@ -108,15 +108,15 @@ general {
     I:HP_ShulkerGhast=40
     I:HP_ShulkerWither=410
     I:HP_SilverfishCreeper=10
-    I:HP_SpiderCreeper=36
+    I:HP_SpiderCreeper=11
     I:HP_SpiderGuardian=50
     I:HP_SpiderPig=25
     I:HP_SpiderWitch=32
     I:HP_Spook=210
-    I:HP_SquidCreeper=26
+    I:HP_SquidCreeper=12
     I:HP_SquidGhast=60
     I:HP_WitherShulker=250
-    I:HP_ZombieCreeper=39
+    I:HP_ZombieCreeper=16
     I:HP_ZombieSpider=32
     I:HP_ZombieSpiderPigman=33
     I:M_BlazeGolemSpawnRate=0
