--- a/server/config/RolikMods/MutatedMobs_Config.cfg
+++ b/server/config/RolikMods/MutatedMobs_Config.cfg
@@ -4,8 +4,8 @@ general {
     I:ATK_BlazeGolem_MAX=22
     I:ATK_BlazeGolem_MIN=8
     I:ATK_BlazePig=6
-    I:ATK_BlazeSkeleton_Arrow=6
-    I:ATK_BlazeSkeleton_Melee=6
+    I:ATK_BlazeSkeleton_Arrow=4
+    I:ATK_BlazeSkeleton_Melee=5
     I:ATK_Blenderman_MAX=14
     I:ATK_Blenderman_MIN=7
     I:ATK_CreeperGolem_MAX=14
@@ -26,7 +26,7 @@ general {
     I:ATK_SlimeGolem_MIN=7
     I:ATK_SpiderGuardian=8
     I:ATK_Spook=10
-    I:ATK_WitherSkeletonIlliusioner=7
+    I:ATK_WitherSkeletonIlliusioner=2
     I:ATK_WitherSkeletonIlliusioner_Clone=0
     I:ATK_ZombieSpider=6
     I:ATK_ZombieSpiderPigman=7
@@ -72,7 +72,7 @@ general {
     B:EnableSlimeGolem=false
     B:EnableSpiderCreeper=false
     B:EnableSpiderGuardian=false
-    B:EnableSpiderPig=false
+    B:EnableSpiderPig=true
     B:EnableSpiderWitch=false
     B:EnableSpook=true
     B:EnableSquidCreeper=false
@@ -85,7 +85,7 @@ general {
     # Mutated Mobs Health && Attack
     I:HP_BlazeGolem=220
     I:HP_BlazePig=30
-    I:HP_BlazeSkeleton=44
+    I:HP_BlazeSkeleton=38
     I:HP_BlazeSnowman=25
     I:HP_Blenderman=60
     I:HP_CreeperGolem=222
@@ -95,14 +95,14 @@ general {
     I:HP_ElderSpiderGuardian=135
     I:HP_EnderCreeper=65
     I:HP_EnderGolem=210
-    I:HP_EnderSnowman=61
+    I:HP_EnderSnowman=222
     I:HP_EndermanSkeleton=60
     I:HP_GhastShulker=60
     I:HP_GuardianGolem=100
     I:HP_HuskSpider=36
     I:HP_IlliusionerCreeper=7
-    I:HP_IlliusionerGhast=20
-    I:HP_IlliusionerWitherSkeleton=25
+    I:HP_IlliusionerGhast=10
+    I:HP_IlliusionerWitherSkeleton=9
     I:HP_PolarWolf=105
     I:HP_SantaSpider=123
     I:HP_ShulkerGhast=40
@@ -138,9 +138,9 @@ general {
     I:M_GhastShulkerSpawnRate=9
     I:M_GuardianGolemSpawnRate=0
     I:M_HuskSpiderSpawnRate=17
-    I:M_IlliusionerCreeperSpawnRate=17
+    I:M_IlliusionerCreeperSpawnRate=5
     I:M_IlliusionerGhastSpawnRate=0
-    I:M_IlliusionerWitherSkeletonSpawnRate=7
+    I:M_IlliusionerWitherSkeletonSpawnRate=3
     I:M_PigmanSpiderSpawnRate=27
     I:M_PolarWolfSpawnRate=9
     I:M_SantaSpiderSpawnRate=1
