--- a/server/config/aroma1997/aromabackup.cfg
+++ b/server/config/aroma1997/aromabackup.cfg
@@ -19,10 +19,10 @@ backup_location {
 
 backup_schedule {
     # How frequently a automatic backup is done in minutes. 0 means Auto-Backup disabled.
-    I:delay=20
+    I:delay=30
 
     # How many full backups to keep. When there are this many full backups, the oldest full backup will be deleted together with all incremental backups, that depend on it. [range: 1 ~ 2147483647, default: 30]
-    I:fullBackupsToKeep=25
+    I:fullBackupsToKeep=12
 
     # How many incremental backups to create. Set to something bigger that 0 to enable. If this is set to for example 5, then there will be one full backup, 5 incremental backups and then the next full backup and so on. [range: 0 ~ 500, default: 0]
     I:incrementalBackupsToCreate=0
@@ -40,14 +40,14 @@ backup_schedule {
 
 general {
     # If all players or only admins can use the /backup command.
-    B:allPlayers=true
+    B:allPlayers=false
 
     # If the blacklist is enabled, the dimensions (ids) specified here will not be backed up.
     I:blacklist <
      >
 
     # Compression rate. Has to be between 9 (high compression) and 1 (low compression).
-    I:compressionRate=5
+    I:compressionRate=4
 
     # If this is set to true, it will use the Dimension Whitelist, if it is false, it will use the Dimension Blacklist
     B:useWhitelist=false
